<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/titleSignupTextView"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:layout_marginTop="85dip"
        android:gravity="center"
        android:text="@string/sign_up_for_loot_clicker"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createAccountOrLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_marginStart="85dp"
        android:gravity="center"
        android:text="@string/create_an_account_or"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSignupTextView" />

    <TextView
        android:id="@+id/loginHighlightTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/createAccountOrLoginTextView"
        app:layout_constraintTop_toBottomOf="@id/titleSignupTextView" />

    <EditText
        android:id="@+id/userNameSignupEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Please enter Username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountOrLoginTextView" />

    <EditText
        android:id="@+id/passwordSignupEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:autofillHints="Please enter Password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameSignupEditText" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:text="@string/sign_up"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordSignupEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>